--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,22 @@ readme = "README.md"
 requires-python = ">=3.11"
 
 dependencies = [
-    "fastapi==0.82.0",
-    "flask==2.2.2",
-    "itsdangerous==2.1.2",
-    "jinja2==3.1.2",
-    "markupsafe==2.1.1",
+    "datasets>=2.19.1",
+    "lightning>=2.4.0",
     "pandas>=2.2.3",
-    "pydantic==1.10.2",
-    "pytest-cov==3.0.0",
+    "peft>=0.13.1",
+    "pydantic-settings>=2.5.2",
+    "pyyaml>=6.0.2",
     "requests==2.28.1",
-    "starlette==0.19.1",
+    "torch>=2.4.1",
+    "transformers>=4.45.2",
     "uvicorn==0.18.3",
-    "werkzeug==2.2.2",
+    "wandb>=0.18.3",
+]
+
+[tool.uv]
+dev-dependencies = [
+    "black>=24.10.0",
+    "pylint>=3.3.1",
+    "pytest>=8.3.3",
 ]
