--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "requests==2.28.1",
     "torch>=2.4.1",
+    "tqdm>=4.66.5",
     "transformers>=4.45.2",
     "uvicorn==0.18.3",
     "wandb>=0.18.3",
